# alerting

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile  snapshot_part1.txt  snapshot_summary.txt  toast.ps1  toast.vbs
.github/: CODEOWNER
.github/workflows/: ci.yml
examples/: config.toml
packaging/msi/: alerting.msi  alerting.wxs
packaging/systemd/user/: alerting.service
packaging/windows/AppIdLauncher/: AlertingLauncher.csproj  Program.cs
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs  types.rs  zbx_client.rs
src/config/: defaults.rs  env.rs  file.rs  mod.rs  raw.rs  serde.rs
src/domain/: mod.rs  severity.rs
src/ui/: mod.rs  notify.rs
src/ui/notify/: linux.rs  windows.rs
src/util/: time.rs
src/zbx/: client.rs  mod.rs  models.rs  types.rs
src/zbx_client/: client.rs  mod.rs  models.rs  ops.rs  rpc.rs
tests/: mock_zbx.rs
tests/snapshots/: mock_zbx__problem_get_payload.snap
