[package]
name = "alerting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
env_logger = { version = "0.11", default-features = false }
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Foundation",
    "Foundation_Collections",
] }
